quest-page: fix empty spaces on smaller screens

--- a/www/sass/frame.scss
+++ b/www/sass/frame.scss
@@ -22,26 +22,18 @@ html, body {
     height: 60px;
 }
 
-// Lastly, apply responsive CSS fixes as necessary
-@media (max-width: 767px) {
-    #footer {
-        margin-left: -20px;
-        margin-right: -20px;
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-}
-
 #wrap > .container {
-    padding-top: 60px;
+    @media (min-width: 980px) {
+        padding-top: 60px;
+    }
     padding-bottom: 30px;
 }
 
-// footer styling
 #footer {
     background-color: #f5f5f5;
     .credit {
         margin: 20px 0;
+        text-align: center;
     }
     .flattr-wrapper {
         position: relative;
@@ -55,10 +47,9 @@ html, body {
 
         a {
             color: #f00;
-        }
-
-        a:hover {
-            text-decoration: none;
+            &:hover {
+                text-decoration: none;
+            }
         }
     }
 }
